--- a/app/src/main/res/layout/fragment_minter.xml
+++ b/app/src/main/res/layout/fragment_minter.xml
@@ -29,205 +29,220 @@
 
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
+        <View
             android:layout_width="match_parent"
-            android:layout_height="74dp"
-            android:background="@drawable/bg_mine_top"
-            android:paddingLeft="16dp"
-            android:paddingRight="28dp">
+            android:layout_height="242dp"
+            android:background="@drawable/bg_mine_top" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/typeSelect"
-                android:layout_width="125dp"
-                android:layout_height="44dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:clickable="true"
-                android:onClick="@{handler.click}">
+                android:layout_width="match_parent"
+                android:layout_height="74dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="28dp">
 
-                <ImageView
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/type"
-                    android:visibility="@{type==0? View.INVISIBLE : View.VISIBLE}"
-                    app:drawableRes="@{icons[type]}" />
+                <RelativeLayout
+                    android:id="@+id/typeSelect"
+                    android:layout_width="125dp"
+                    android:layout_height="44dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:clickable="true"
+                    android:onClick="@{handler.click}">
 
-                <TextView
-                    android:id="@+id/type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="4dp"
-                    android:gravity="center"
-                    android:text="@{titles[type]}"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/font_17" />
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/type"
+                        android:visibility="@{type==0? View.INVISIBLE : View.VISIBLE}"
+                        app:drawableRes="@{icons[type]}" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/type"
-                    android:src="@drawable/ic_arrow_down_white" />
+                    <TextView
+                        android:id="@+id/type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="4dp"
+                        android:gravity="center"
+                        android:text="@{titles[type]}"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/font_17" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/type"
+                        android:src="@drawable/ic_arrow_down_white" />
+
+                </RelativeLayout>
+
 
             </RelativeLayout>
 
-
-        </RelativeLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:id="@+id/minterTypes"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="@{typeListVisible ? View.VISIBLE : View.GONE}">
+                android:layout_height="match_parent">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/typeAll"
+                <com.metron.coin.view.NoScrollViewPager
+                    android:id="@+id/viewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:onClick="@{handler.click}"
-                    app:cardElevation="0dp">
+                    android:layout_height="match_parent" />
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="全部矿机"
-                            android:textColor="@color/font_normal"
-                            android:textSize="@dimen/font_16" />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_alignParentBottom="true"
-                            android:background="#EAE9E9" />
-
-                    </RelativeLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/typeBTC"
+                <LinearLayout
+                    android:id="@+id/minterTypes"
                     android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:onClick="@{handler.click}"
-                    app:cardElevation="0dp">
+                    android:layout_height="176dp"
+                    android:orientation="vertical"
+                    android:visibility="@{typeListVisible ? View.VISIBLE : View.GONE}">
 
-                    <RelativeLayout
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/typeAll"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="44dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick="@{handler.click}"
+                        app:cardElevation="0dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:drawableLeft="@drawable/ic_btc"
-                            android:drawablePadding="2dp"
-                            android:text="BTC"
-                            android:textColor="@color/font_normal"
-                            android:textSize="@dimen/font_16" />
-
-                        <View
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_alignParentBottom="true"
-                            android:background="#EAE9E9" />
+                            android:layout_height="match_parent">
 
-                    </RelativeLayout>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:text="全部矿机"
+                                android:textColor="@color/font_normal"
+                                android:textSize="@dimen/font_16" />
 
-                </androidx.cardview.widget.CardView>
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_alignParentBottom="true"
+                                android:background="#EAE9E9" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/typeETH"
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:onClick="@{handler.click}"
-                    app:cardElevation="0dp">
+                        </RelativeLayout>
 
-                    <RelativeLayout
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/typeBTC"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="44dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick="@{handler.click}"
+                        app:cardElevation="0dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:drawableLeft="@drawable/ic_eth"
-                            android:drawablePadding="2dp"
-                            android:text="ETH"
-                            android:textColor="@color/font_normal"
-                            android:textSize="@dimen/font_16" />
-
-                        <View
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_alignParentBottom="true"
-                            android:background="#EAE9E9" />
+                            android:layout_height="match_parent">
 
-                    </RelativeLayout>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:drawableLeft="@drawable/ic_btc"
+                                android:drawablePadding="2dp"
+                                android:text="BTC"
+                                android:textColor="@color/font_normal"
+                                android:textSize="@dimen/font_16" />
 
-                </androidx.cardview.widget.CardView>
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_alignParentBottom="true"
+                                android:background="#EAE9E9" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/typeUSDT"
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:onClick="@{handler.click}"
-                    app:cardElevation="0dp">
+                        </RelativeLayout>
 
-                    <RelativeLayout
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/typeETH"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="44dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick="@{handler.click}"
+                        app:cardElevation="0dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:drawableLeft="@drawable/ic_usdt"
-                            android:drawablePadding="2dp"
-                            android:text="USDT"
-                            android:textColor="@color/font_normal"
-                            android:textSize="@dimen/font_16" />
-
-                        <View
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_alignParentBottom="true"
-                            android:background="#EAE9E9" />
+                            android:layout_height="match_parent">
 
-                    </RelativeLayout>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:drawableLeft="@drawable/ic_eth"
+                                android:drawablePadding="2dp"
+                                android:text="ETH"
+                                android:textColor="@color/font_normal"
+                                android:textSize="@dimen/font_16" />
 
-                </androidx.cardview.widget.CardView>
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_alignParentBottom="true"
+                                android:background="#EAE9E9" />
 
-            </LinearLayout>
+                        </RelativeLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/typeUSDT"
+                        android:layout_width="match_parent"
+                        android:layout_height="44dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick="@{handler.click}"
+                        app:cardElevation="0dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:drawableLeft="@drawable/ic_usdt"
+                                android:drawablePadding="2dp"
+                                android:text="USDT"
+                                android:textColor="@color/font_normal"
+                                android:textSize="@dimen/font_16" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_alignParentBottom="true"
+                                android:background="#EAE9E9" />
+
+                        </RelativeLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
 
 
-        </FrameLayout>
+            </RelativeLayout>
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </FrameLayout>
+
 
 </layout>
